# xthread

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_CN.md  setup.py
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  config.h.in
benchmark/async_task/: main.cc  omp.cc  std.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/binary_tree/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/black_scholes/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/data_pipeline/: main.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/deferred_pipeline/: main.cc  pthread.cc  pthread.cpp  taskflow.cc  taskflow.cpp
benchmark/fibonacci/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/for_each/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/graph_pipeline/: fastflow.cc  gold.cc  main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/graph_traversal/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/hetero_traversal/: graph.h  graph.hpp  main.cu  omp.cu  taskflow.cu  tbb.cu
benchmark/integrate/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/linear_chain/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/linear_pipeline/: main.cc  omp.cc  seq.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/mandelbrot/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/matrix_multiplication/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/mnist/: main.cc  omp.cc  seq.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/nqueens/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/primes/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/reduce_sum/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/scan/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/skynet/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/sort/: main.cc  omp.cc  taskflow.cc  taskflow.cpp  tbb.cc
benchmark/thread_pool/: thread_pool.cc  thread_pool.cpp
benchmark/wavefront/: main.cc  omp.cc  seq.cc  taskflow.cc  taskflow.cpp  tbb.cc
cmake/: xthread_config.cmake.in  xthread_cxx_config.cmake  xthread_deps.cmake  xthread_install_header.cmake  xthread_user_option.cmake
docs/: AI.md  AI_UPGRADE.md  AI_UPGRADE_1_5.md
examples/: CMakeLists.txt  async.cc  async.cpp  async_module.cc  async_module.cpp  attach_data.cc  attach_data.cpp  cancel.cc  cancel.cpp  composition.cc  composition.cpp  condition.cc  condition.cpp  corun.cc  corun.cpp  data_scalable_parallel_pipeline.cc  data_scalable_parallel_pipeline.cpp  dependent_async.cc  dependent_async.cpp  dependent_async_algorithm.cc  dependent_async_algorithm.cpp  do_while_loop.cc  do_while_loop.cpp  exception.cc  exception.cpp  exclusive_scan.cc  exclusive_scan.cpp  fibonacci.cc  fibonacci.cpp  foo_ex.cc  for_loop.cc  for_loop.cpp  if_else.cc  if_else.cpp  inclusive_scan.cc  inclusive_scan.cpp  limited_concurrency.cc  limited_concurrency.cpp  multi_condition.cc  multi_condition.cpp  (+44 more)
examples/cuda/: CMakeLists.txt  cuda_capturer.cu  cuda_device_property.cu  cuda_find.cu  cuda_knn.cu  cuda_matmul.cu  cuda_merge.cu  cuda_reduce.cu  cuda_saxpy.cu  cuda_saxpy_update.cu  cuda_scan.cu  cuda_sort.cu  cuda_transform.cu
examples/dsl/: CMakeLists.txt  condition_dsl.cc  condition_dsl.cpp  simple_dsl.cc  simple_dsl.cpp  visualization_dsl.cc  visualization_dsl.cpp
kmcmake/: kmcmake_module.cmake  kmcmake_option.cmake
kmcmake/arch/: kmcmake_arch.cmake
kmcmake/tools/: default_setting.cmake  kmcmake_ar_shared.cmake  kmcmake_ar_static.cmake  kmcmake_cc_benchmark.cmake  kmcmake_cc_binary.cmake  kmcmake_cc_interface.cmake  kmcmake_cc_library.cmake  kmcmake_cc_object.cmake  kmcmake_cc_proto_object.cmake  kmcmake_cc_test.cmake  kmcmake_compiler_flags.cmake  kmcmake_product_interface.cmake
tests/: CMakeLists.txt  foo_doctest.cc  foo_test.cc  latch_test.cc  simple_thread_test.cc  test_asyncs.cc  test_asyncs.cpp  test_basics.cc  test_basics.cpp  test_cancellation.cc  test_cancellation.cpp  test_control_flow.cc  test_control_flow.cpp  test_data_pipelines.cc  test_data_pipelines.cpp  test_deferred_pipelines.cc  test_deferred_pipelines.cpp  test_deferred_scalable_pipelines.cc  test_deferred_scalable_pipelines.cpp  test_dependent_asyncs.cc  test_dependent_asyncs.cpp  test_exceptions.cc  test_exceptions.cpp  test_find.cc  test_find.cpp  test_for_each.cc  test_for_each.cpp  test_modules.cc  test_modules.cpp  test_movable.cc  test_movable.cpp  test_pipelines.cc  test_pipelines.cpp  test_priorities.cc  test_priorities.cpp  test_queue.cc  test_queue.cpp  test_reduce.cc  test_reduce.cpp  test_runtimes.cc  (+25 more)
tests/cuda/: CMakeLists.txt  cuda_algorithm_updates.cu  cuda_algorithms.cu  test_cuda_basics.cu  test_cuda_capture.cu  test_cuda_capturer_optimizer.cu  test_cuda_find.cu  test_cuda_for_each.cu  test_cuda_kmeans.cu  test_cuda_matrix.cu  test_cuda_merge.cu  test_cuda_min_max_element.cu  test_cuda_objects.cu  test_cuda_reduce.cu  test_cuda_scan.cu  test_cuda_transform.cu  test_cuda_updates.cu
tests/cuda/details/: diamond.h  graph_base.h  graph_base.hpp  graph_executor.h  graph_executor.hpp  random_DAG.h  random_DAG.hpp
xthread/: CMakeLists.txt  foo.cc  latch.h  main.cc  simple_thread.h  skills.h  taskflow.h  taskflow.hpp  thread_atexit.h  thread_name.h  version.h.in
xthread/algorithm/: algorithm.h  data_pipeline.h  data_pipeline.hpp  find.h  find.hpp  for_each.h  for_each.hpp  module.h  module.hpp  partitioner.h  partitioner.hpp  pipeline.h  pipeline.hpp  reduce.h  reduce.hpp  scan.h  scan.hpp  sort.h  sort.hpp  transform.h  transform.hpp
xthread/core/: async.h  async.hpp  async_task.h  async_task.hpp  atomic_notifier.h  atomic_notifier.hpp  declarations.h  environment.h  error.h  error.hpp  executor.h  executor.hpp  flow_builder.h  flow_builder.hpp  freelist.h  freelist.hpp  graph.h  graph.hpp  nonblocking_notifier.h  nonblocking_notifier.hpp  observer.h  observer.hpp  runtime.h  runtime.hpp  semaphore.h  semaphore.hpp  task.h  task.hpp  taskflow.h  taskflow.hpp  topology.h  tsq.h  tsq.hpp  (+2 more)
(+73 files in other folders)
